pkg/policy/testdata/validate/invalid/pack-missing-rules.rego
# Invalid pack - missing rules field
package infraguard.packs.aliyun.missing_rules_pack

import rego.v1

pack_meta := {
	"id": "missing-rules-pack",
	"name": {"en": "Missing Rules Pack"},
	"description": {"en": "This pack is missing the rules field."},
}
